objects/Roleplay_Signup__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Roleplay_Campaign__c</referenceTo>
        <relationshipName>Signups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <formula>Roleplayer__r.Class__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constitution__c</fullName>
        <formula>Roleplayer__r.Constitution__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Constitution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dexterity__c</fullName>
        <formula>Roleplayer__r.Dexterity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dexterity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <formula>Roleplayer__r.Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <formula>Roleplayer__r.Race__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Race</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roleplayer_Name__c</fullName>
        <formula>Roleplayer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Roleplayer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roleplayer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Roleplayer</label>
        <referenceTo>Roleplayer__c</referenceTo>
        <relationshipName>Signups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Strength__c</fullName>
        <formula>Roleplayer__r.Strength__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strength</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Signup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Roleplayer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>Roleplay Signup Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Signups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>